Mon May 25 12:38:56 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* regex.c (re_compile_pattern): inline i option (?i).

	* regex.c (re_compile_pattern): inline x option (?x).

	* regex.c (re_compile_pattern): x option for regexp.

	* dir.c (dir_s_open): returns block's evaluated value.

	* io.c (f_open): returns block's evaluated value.

	* ext/curses/curses.c (curses_addstr): nil argument caused SEGV.

Fri May 22 11:52:45 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* regex.c (re_compile_pattern): push mark on (?:), so that
	  laststart check for {a,b} can be done.

Thu May 21 17:31:16 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* regex.c (re_match): wrong match (too non-greedy) for `{a,b}?'.

	* io.c (io_lineno): new method IO#lineno, IO#lineno=.

Wed May 20 06:04:43 1998  MAEDA shugo  <shugo@aianet.ne.jp>

	* BeOS patch.

Wed May 20 16:32:19 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* bignum.c (BIGDN): use RSHIFT(), instead of mere `>>'.

Tue May 19 16:36:26 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* experimental release 1.1b9_22.

Tue May 19 16:31:57 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* parse.y (assignable): specification changed for in-block
 	  variable definition.

	* eval.c (dyna_var_asgn): error in in-block variables' compile
 	  time definition.

	* parse.y (str_extend): wrong nesting detection.

Tue May 19 09:47:55 1998  WATANABE Hirofumi  <watanabe@ase.ptg.sony.co.jp>

	* numeric.c (num2int): re-defined (extensions may use this).

Mon May 18 16:40:50 1998  MAEDA shugo  <shugo@aianet.ne.jp>

	* error.c (get_syserr): BeOS support.

	* configure.in: modified for BeOS.

	* string.c (str_dump): do not call isascii().

	* sprintf.c (remove_sign_bits): forgot to initialize end pointer.

	* glob.c: #include <alloca.h> added.

Mon May 18 14:52:21 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>
	
	* experimental release 1.1b9_21.

Mon May 18 03:27:57 1998  MAEDA shugo  <shugo@aianet.ne.jp>
